Add a version that mirrors parent repo

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dhigroup/vtk.js-fork",
-  "version": "1.0.0",
+  "version": "6.4.22-alpha1",
   "description": "For of vtk.js for experimentation - Visualization Toolkit for the Web",
   "keywords": [
     "3d",
