--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "karma-webpack": "2.0.4",
     "kw-doc": "1.1.3",
     "kw-web-suite": "6.0.2",
+    "raw-loader": "^0.5.1",
     "resemblejs": "2.2.6",
     "tap-markdown": "1.2.1",
     "tap-spec": "4.1.1",
